layout problem fixed by hiding overflow

--- a/style.css
+++ b/style.css
@@ -7,28 +7,27 @@
 
 body {
     background: #f7d7d5;
-    margin: 0
+    overflow: hidden;
 
 }
 
 .Frame3{
-       display: flex;
+display: flex;
 flex-direction: column;
 align-items: center;
 margin: 0px 50px;
-height:100vh
+overflow: hidden;
 }
 
-.Frame1
-
-{  display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0px 50px;
-    width: 100%;
-    margin-bottom: 50px;
-    margin-top: 50px;
+.Frame1 {
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+margin: 0px 50px;
+width: 100%;
+margin-bottom: 50px;
+margin-top: 50px;
 }
 
 .info {
@@ -40,7 +39,7 @@ gap: 20px;
 }
 
 .sottotesto{
-    font-family: 'AG Old Face';
+font-family: 'AG Old Face';
 font-style: normal;
 font-weight: 500;
 font-size: 20px;
@@ -72,8 +71,8 @@ background: #f7d7d5;
 }
 
 .box_frame2{
-    padding-left: 55px;
-    display: flex;
+padding-left: 60px;
+display: flex;
 flex-direction: column;
 align-items: flex-start;
 gap: 75px;
